--- a/tensor_day_3.ipynb
+++ b/tensor_day_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "torch.Size([2, 5])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[4, 1, 2, 3, 4, 5, 4, 7, 8, 9]]),\n",
-       " tensor([4, 1, 2, 3, 4, 5, 4, 7, 8, 9]))"
+       "(tensor([[0, 1, 2, 3, 4, 5, 4, 7, 8, 9]]),\n",
+       " tensor([0, 1, 2, 3, 4, 5, 4, 7, 8, 9]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[4, 4, 4, 4, 4, 4, 4],\n",
+       "tensor([[0, 0, 0, 0, 0, 0, 0],\n",
        "        [1, 1, 1, 1, 1, 1, 1],\n",
        "        [2, 2, 2, 2, 2, 2, 2],\n",
        "        [3, 3, 3, 3, 3, 3, 3],\n",
@@ -132,7 +132,7 @@
        "        [9, 9, 9, 9, 9, 9, 9]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,19 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[4, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
-       "        [4, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
-       "        [4, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
-       "        [4, 1, 2, 3, 4, 5, 4, 7, 8, 9]])"
+       "tensor([[0, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
+       "        [0, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
+       "        [0, 1, 2, 3, 4, 5, 4, 7, 8, 9],\n",
+       "        [0, 1, 2, 3, 4, 5, 4, 7, 8, 9]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[4, 4, 4, 4],\n",
+       "tensor([[[0, 0, 0, 0],\n",
        "         [1, 1, 1, 1],\n",
        "         [2, 2, 2, 2],\n",
        "         [3, 3, 3, 3],\n",
@@ -187,7 +187,7 @@
        "         [9, 9, 9, 9]]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,26 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.9598, 0.7479, 0.0840, 0.0622, 0.9645, 0.7284],\n",
-       "         [0.9598, 0.7479, 0.0840, 0.0622, 0.9645, 0.7284],\n",
-       "         [0.9598, 0.7479, 0.0840, 0.0622, 0.9645, 0.7284]],\n",
+       "tensor([[[0.2937, 0.3958, 0.5414, 0.4419, 0.7953, 0.3997],\n",
+       "         [0.2937, 0.3958, 0.5414, 0.4419, 0.7953, 0.3997],\n",
+       "         [0.2937, 0.3958, 0.5414, 0.4419, 0.7953, 0.3997]],\n",
        "\n",
-       "        [[0.3802, 0.9113, 0.7283, 0.0756, 0.4530, 0.4343],\n",
-       "         [0.3802, 0.9113, 0.7283, 0.0756, 0.4530, 0.4343],\n",
-       "         [0.3802, 0.9113, 0.7283, 0.0756, 0.4530, 0.4343]],\n",
+       "        [[0.1348, 0.4531, 0.6535, 0.1437, 0.2298, 0.1435],\n",
+       "         [0.1348, 0.4531, 0.6535, 0.1437, 0.2298, 0.1435],\n",
+       "         [0.1348, 0.4531, 0.6535, 0.1437, 0.2298, 0.1435]],\n",
        "\n",
-       "        [[0.9336, 0.3424, 0.3865, 0.8382, 0.8502, 0.4759],\n",
-       "         [0.9336, 0.3424, 0.3865, 0.8382, 0.8502, 0.4759],\n",
-       "         [0.9336, 0.3424, 0.3865, 0.8382, 0.8502, 0.4759]]])"
+       "        [[0.0264, 0.1841, 0.1836, 0.8863, 0.6268, 0.6749],\n",
+       "         [0.0264, 0.1841, 0.1836, 0.8863, 0.6268, 0.6749],\n",
+       "         [0.0264, 0.1841, 0.1836, 0.8863, 0.6268, 0.6749]]])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,17 +247,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 3, 6])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4386, 0.8084, 0.3153],\n",
+       "        [0.7322, 0.8341, 0.6581],\n",
+       "        [0.5951, 0.7998, 0.6064]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.rand(3,3)"
+   ]
   },
   {
    "cell_type": "code",
